Add source XContentType to Translog